--- a/src/main/webapp/Gae_gwt_stub.css
+++ b/src/main/webapp/Gae_gwt_stub.css
@@ -32,3 +32,13 @@ h1 {
 #closeButton {
   margin: 15px 6px 6px;
 }
+span {
+	font-size: 20px;
+}
+/*
+font-size: 10px;
+    color: #a09a9a;
+    top: 10px;
+    left: -80px;
+    position: relative;
+*/
